Bug 767926 - Implement unions as member types of sequences or dictionaries for WebIDL r=bz